# PacmanTheGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: map.txt
assets/walls/: wall4.aseprite  wall5.aseprite
docs/: Classes.plantuml  Use_case.plantuml
include/Collectable/: Collectable.h  Food.h  PowerUp.h
include/Config/: DataConfig.h.in
include/Entity/: Entity.h  Ghost.h  GhostStrategy.h  Movement.h  Pacman.h
include/Map/: Field.h  Game.h  Level.h
include/Scenes/: GameScene.h  Lost.h  Menu.h  Scene.h  ScoreTable.h
include/Tools/: DataManager.h  General.h  ObserverPattern.h  ResourceManager.h  Timer.h
include/UI/: Button.h  Container.h  GameUI.h  Label.h  Map.h  RemoveContainer.h  Table.h  UI.h
src/Collectable/: Collectable.cpp  Food.cpp  PowerUp.cpp
src/Entity/: Entity.cpp  Ghost.cpp  GhostStrategy.cpp  Movement.cpp  Pacman.cpp
src/Map/: Field.cpp  Game.cpp  Level.cpp
src/Scenes/: GameScene.cpp  Lost.cpp  Menu.cpp  ScoreTable.cpp
src/Tools/: DataManager.cpp  General.cpp  ObserverPattern.cpp  ResourceManager.cpp  Timer.cpp
src/UI/: Button.cpp  Container.cpp  GameUI.cpp  Label.cpp  Map.cpp  RemoveContainer.cpp  Table.cpp  UI.cpp
